--- a/src/app/modules/blogs/v2/edit/editor-base.component.html
+++ b/src/app/modules/blogs/v2/edit/editor-base.component.html
@@ -56,13 +56,14 @@
           >
             <m-button
               class="m-blogEditor__bannerUploadButton"
+              size="small"
               (onAction)="bannerUpload.click()"
             >
               <i class="material-icons">publish</i>
               Upload Banner
             </m-button>
 
-            <span>930px x 300px</span>
+            <span>Recommended banner dimensions 930px x 500px</span>
 
             <input
               hidden
