--- a/src/app/modules/blogs/view/view.html
+++ b/src/app/modules/blogs/view/view.html
@@ -38,7 +38,7 @@
   <minds-banner
     [src]="blog.thumbnail_src"
     [object]="blog"
-    [wideBanner]="blog.time_published > wideBannerDate"
+    [wideBanner]="blog.time_published > wideBannerDate || blog.time_published == ''"
     *ngIf="blog.header_bg"
   ></minds-banner>
 </header>
