(feat) minds chat link

--- a/src/app/modules/mobile/marketing/marketing.component.html
+++ b/src/app/modules/mobile/marketing/marketing.component.html
@@ -57,11 +57,13 @@
         </div>
 
         <div class="m-marketing__gridItemActions">
-          <!-- <a
-            href="{{ cdnAssetsUrl }}assets/marketing/mobile/mindsLogoDark.png"
+          <a
+            href="https://minds-repo.s3.amazonaws.com/android/MindsChat-1_1_6.apk"
             target="_blank"
-            ><img src="{{ cdnAssetsUrl }}assets/marketing/mobile/download-minds.svg" height="40"
-          /></a> -->
+            ><img
+              src="{{ cdnAssetsUrl }}assets/marketing/mobile/download-minds.svg"
+              height="40"
+          /></a>
           <a
             href="https://play.google.com/store/apps/details?id=com.minds.chat"
             target="_blank"
