Adding in admin options to manually add and remove plus and pro

--- a/src/app/modules/channels/v2/actions/menu.component.html
+++ b/src/app/modules/channels/v2/actions/menu.component.html
@@ -63,6 +63,12 @@
         </span>
       </li>
 
+      <li (click)="plusAdminToggle()" *ngIf="!(service.channel$ | async)?.pro">
+        <span class="m-dropdownMenu__item">
+          {{ !(service.channel$ | async)?.plus ? 'Make Plus' : 'Remove Plus' }}
+        </span>
+      </li>
+
       <ng-container *ngIf="service.isExplicit$ | async">
         <li (click)="setExplicit(false)">
           <span
