Subscriber list paginate minds#1757

--- a/src/app/modules/channels/v2/list/list.component.html
+++ b/src/app/modules/channels/v2/list/list.component.html
@@ -41,7 +41,7 @@
 
       <infinite-scroll
         distance="25%"
-        (load)="feedsService.loadNext()"
+        (load)="loadNext()"
         [moreData]="feedsService.hasMore | async"
         [inProgress]="feedsService.inProgress | async"
       ></infinite-scroll>
