--- a/src/app/modules/onboarding-v2/page/onboarding.component.scss
+++ b/src/app/modules/onboarding-v2/page/onboarding.component.scss
@@ -159,23 +159,31 @@ m-onboarding {
       h2 {
         font-size: 32px;
         line-height: 43px;
-        color: #4a4a4a;
         padding-bottom: 13px;
         font-weight: bold;
+
+        @include m-theme() {
+          color: themed($m-textColor--primary);
+        }
 
         &.m-onboarding__mobileTitle {
           font-size: 28px;
           line-height: 37px;
           margin-top: 0;
           margin-bottom: 30px;
-          color: #4a4a4a;
           text-align: center;
           word-break: break-word;
+
+          @include m-theme() {
+            color: themed($m-textColor--primary);
+          }
         }
 
         &:not(.m-onboarding__noticeTitle):not(.m-onboardingProgressbar__stepName) {
           @media screen and (max-width: 740px) {
-            color: #a2a2a2;
+            @include m-theme() {
+              color: themed($m-textColor--secondary);
+            }
             font-size: 13px;
             line-height: 18px;
             letter-spacing: 2px;
