--- a/src/app/modules/notifications/flyout.component.scss
+++ b/src/app/modules/notifications/flyout.component.scss
@@ -6,7 +6,7 @@ m-notifications--flyout {
   top: 24px;
   right: -160px;
   @include m-theme() {
-    background-color: themed($m-grey-100);
+    background-color: themed($m-bgColor--primary);
   }
 
   @media screen and (max-width: $max-mobile) {
