--- a/src/app/modules/notifications/v3/notification.component.ng.scss
+++ b/src/app/modules/notifications/v3/notification.component.ng.scss
@@ -77,6 +77,16 @@
     margin-left: 20px;
   }
 
+  .m-notificationsNotification__readIndicator {
+    width: 10px;
+    height: 10px;
+    margin-left: 10px;
+    border-radius: 50%;
+    @include m-theme() {
+      background-color: themed($m-link);
+    }
+  }
+
   ::ng-deep m-newsfeed__entity {
     .m-activity__minimalMetrics {
       display: none;
