--- a/src/app/modules/notifications/v3/notification.component.html
+++ b/src/app/modules/notifications/v3/notification.component.html
@@ -94,6 +94,12 @@
       <ng-template ngSwitchCase="tag">
         <m-icon iconId="face"></m-icon>
       </ng-template>
+      <ng-template ngSwitchCase="remind">
+        <m-icon iconId="repeat"></m-icon>
+      </ng-template>
+      <ng-template ngSwitchCase="quote">
+        <m-icon iconId="create"></m-icon>
+      </ng-template>
     </ng-container>
   </div>
 </ng-template>
