fix typo on rewards tooltip

--- a/src/app/modules/wallet/components/tokens/rewards/rewards.component.html
+++ b/src/app/modules/wallet/components/tokens/rewards/rewards.component.html
@@ -687,7 +687,7 @@
         </p>
         <p>
           <b>Hardcore &middot; 3x</b> <br />
-          Active six days over the past six days
+          Active six days over the past seven days
         </p>
       </ng-container>
     </m-tooltip>
