(fix): do not explode if a post you are tagged in has been deleted

--- a/src/app/modules/notifications/v3/notification.component.html
+++ b/src/app/modules/notifications/v3/notification.component.html
@@ -65,7 +65,7 @@
   </div>
 
   <m-newsfeed__entity
-    *ngIf="notification.entity?.type !== 'comment'"
+    *ngIf="notification.entity && notification.entity?.type !== 'comment'"
     [entity]="notification.entity"
     [displayOptions]="{
       minimalMode: true,
