(fix): use em instead of px to avoid icons being non-centred in some browsers

--- a/src/app/modules/notifications/v3/notification.component.ng.scss
+++ b/src/app/modules/notifications/v3/notification.component.ng.scss
@@ -42,7 +42,7 @@
       }
 
       ::ng-deep m-icon i {
-        font-size: 12px !important;
+        font-size: 0.75em !important;
         @include m-theme() {
           color: themed($m-white-always);
         }
