--- a/src/app/modules/notifications/v3/list.component.ng.scss
+++ b/src/app/modules/notifications/v3/list.component.ng.scss
@@ -4,7 +4,7 @@
   display: block;
 
   @include m-theme() {
-    background-color: themed($m-bgColor--primary);
+    background-color: themed($m-bgColor--primaryAlt);
   }
 
   .m-tabs__container {
