--- a/src/app/modules/notifications/v3/list.component.html
+++ b/src/app/modules/notifications/v3/list.component.html
@@ -26,6 +26,7 @@
   distance="25%"
   (load)="loadNext()"
   [moreData]="true"
+  [scrollSource]="scrollSource"
   [inProgress]="inProgress$ | async"
 >
 </infinite-scroll>
