--- a/src/stylesheets/defaults.scss
+++ b/src/stylesheets/defaults.scss
@@ -71,3 +71,13 @@ $layout-sidebar-width: 80px;
     @content;
   }
 }
+
+@mixin hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
