--- a/src/app/modules/notifications/v3/notification.component.ng.scss
+++ b/src/app/modules/notifications/v3/notification.component.ng.scss
@@ -12,6 +12,9 @@
     margin-bottom: 20px;
     font-size: 15px;
   }
+  .m-notifications__notification--noPreview {
+    margin-bottom: 0;
+  }
   .m-notificationsNotification__avatar,
   .m-notificationsNotification__body {
     //padding: 20px;
