--- a/src/app/modules/notifications/flyout.component.html
+++ b/src/app/modules/notifications/flyout.component.html
@@ -2,10 +2,12 @@
   <div
     class="m-notificationsFlyout__scrollable"
     *ngIf="visible"
+    (scroll)="onScroll($event)"
     #scrollableArea
   >
     <m-notifications__list
       [scrollSource]="scrollableArea"
+      [scrolledPastTabs]="scrolledPastTabs"
     ></m-notifications__list>
   </div>
 </ng-container>
