--- a/src/app/modules/newsfeed/activity/toolbar/toolbar.component.html
+++ b/src/app/modules/newsfeed/activity/toolbar/toolbar.component.html
@@ -1,33 +1,81 @@
-<minds-button-thumbs-up [object]="entity"></minds-button-thumbs-up>
-<minds-button-thumbs-down [object]="entity"></minds-button-thumbs-down>
-
-<m-activity__remindButton *ngIf="allowReminds"> </m-activity__remindButton>
-
-<minds-button-comment
-  [object]="entity"
-  (click)="toggleComments()"
-  *ngIf="
-    !service.displayOptions.showComments || service.displayOptions.showComments
-  "
-></minds-button-comment>
-
-<!-- Show wire if not own post -->
-<ng-container *ngIf="session.getLoggedInUser().guid != entity.ownerObj.guid">
-  <div class="m-layout__spacer"></div>
-
-  <m-wire-button [object]="entity"></m-wire-button>
-</ng-container>
-
-<!-- Show boost if own post -->
-<ng-container *ngIf="session.getLoggedInUser().guid == entity.ownerObj.guid">
-  <div class="m-layout__spacer"></div>
-
-  <button
-    class="m-btn m-btn--slim m-boostButton"
-    (click)="openBoostModal($event)"
-    data-cy="data-minds-activity-boost-button"
+<div class="m-activityToolbar__metrics">
+  <div
+    class="m-activityToolbarMetrics__metric"
+    *ngIf="entity['thumbs:up:count'] > 0"
+    (click)="openInteractions('votes-up')"
   >
-    <span i18n="verb|@@M__ACTION__BOOST">Boost</span>
-    <m-icon from="md" iconId="trending_up" [sizeFactor]="20"></m-icon>
-  </button>
-</ng-container>
+    <span>{{ entity['thumbs:up:count'] }}</span>
+    <span>up-votes</span>
+  </div>
+
+  <div
+    class="m-activityToolbarMetrics__metric"
+    *ngIf="entity['thumbs:down:count'] > 0"
+    (click)="openInteractions('votes-down')"
+  >
+    <span>{{ entity['thumbs:down:count'] }}</span>
+    <span>down-votes</span>
+  </div>
+
+  <div
+    class="m-activityToolbarMetrics__metric"
+    *ngIf="entity?.reminds > 0"
+    (click)="openInteractions('reminds')"
+  >
+    <span>{{ entity.reminds }}</span>
+    <span>reminds</span>
+  </div>
+
+  <div
+    class="m-activityToolbarMetrics__metric"
+    *ngIf="entity?.quotes > 0"
+    (click)="openInteractions('quotes')"
+  >
+    <span>{{ entity.quotes }}</span>
+    <span>quotes</span>
+  </div>
+</div>
+
+<div class="m-activityToolbar__actions">
+  <minds-button-thumbs-up
+    [object]="entity"
+    iconOnly="true"
+  ></minds-button-thumbs-up>
+  <minds-button-thumbs-down
+    [object]="entity"
+    iconOnly="true"
+  ></minds-button-thumbs-down>
+
+  <m-activity__remindButton *ngIf="allowReminds"> </m-activity__remindButton>
+
+  <minds-button-comment
+    [object]="entity"
+    iconOnly="true"
+    (click)="toggleComments()"
+    *ngIf="
+      !service.displayOptions.showComments ||
+      service.displayOptions.showComments
+    "
+  ></minds-button-comment>
+
+  <!-- Show wire if not own post -->
+  <ng-container *ngIf="session.getLoggedInUser().guid != entity.ownerObj.guid">
+    <div class="m-layout__spacer"></div>
+
+    <m-wire-button [object]="entity"></m-wire-button>
+  </ng-container>
+
+  <!-- Show boost if own post -->
+  <ng-container *ngIf="session.getLoggedInUser().guid == entity.ownerObj.guid">
+    <div class="m-layout__spacer"></div>
+
+    <button
+      class="m-btn m-btn--slim m-boostButton"
+      (click)="openBoostModal($event)"
+      data-cy="data-minds-activity-boost-button"
+    >
+      <span i18n="verb|@@M__ACTION__BOOST">Boost</span>
+      <m-icon from="md" iconId="trending_up" [sizeFactor]="20"></m-icon>
+    </button>
+  </ng-container>
+</div>
