(chore): only show interactions bar on modals and full view pages - closes #4791

--- a/src/app/modules/newsfeed/activity/modal/modal.component.ng.scss
+++ b/src/app/modules/newsfeed/activity/modal/modal.component.ng.scss
@@ -382,6 +382,11 @@ $modal-padding: 20px;
           display: none;
         }
 
+        .m-activityToolbar__metrics,
+        .m-activityToolbar__actions {
+          padding: 20px 0;
+        }
+
         minds-button-comment {
           > a > span {
             padding-right: 0;
