--- a/src/app/modules/newsfeed/single/single.component.html
+++ b/src/app/modules/newsfeed/single/single.component.html
@@ -42,6 +42,7 @@
             fixedHeight: fixedHeight,
             showOnlyCommentsInput: false,
             showComments: !fixedHeight,
+            showInteractions: true,
             autoplayVideo: false
           }"
           [slot]="1"
