--- a/src/app/modules/newsfeed/activity/remind-button/remind-button.component.html
+++ b/src/app/modules/newsfeed/activity/remind-button/remind-button.component.html
@@ -5,6 +5,12 @@
     (click)="onButtonClick($event)"
   >
     <i class="material-icons">repeat</i>
+
+    <span
+      class="minds-counter"
+      *ngIf="!service.displayOptions.showInteractions && (count$ | async) > 0"
+      >{{ count$ | async }}</span
+    >
   </button>
 
   <ul class="m-dropdown__list" *ngIf="isOpened$ | async">
