--- a/src/app/modules/comments/comment/comment.component.ng.scss
+++ b/src/app/modules/comments/comment/comment.component.ng.scss
@@ -136,7 +136,8 @@
   }
 
   .m-comment__matureScreen {
-    margin: 25px 0;
+    margin: 5px 0 10px 0;
+
     span {
       font-size: 15px;
       line-height: 23px;
