--- a/src/app/modules/notifications/v3/notification.component.html
+++ b/src/app/modules/notifications/v3/notification.component.html
@@ -7,6 +7,7 @@
     <div
       class="m-notifications__notification"
       [class.m-notifications__notification--noPreview]="!entity"
+      (click)="onClick($event)"
     >
       <div class="m-notificationsNotification__avatar">
         <a [routerLink]="['/', notification.from.username]">
