(fix): mark as read not working due to too high threshold and display:contents on component

--- a/src/app/modules/notifications/v3/notification.component.html
+++ b/src/app/modules/notifications/v3/notification.component.html
@@ -1,5 +1,6 @@
 <ng-container *ngIf="notification; else ghostView">
   <a
+    #notificationWrapper
     class="m-notification__wrapperLink"
     [routerLink]="nounLink"
     [queryParams]="nounLinkParams"
