(chore): support for reply comment notification

--- a/src/app/modules/notifications/v3/notification.component.ng.scss
+++ b/src/app/modules/notifications/v3/notification.component.ng.scss
@@ -105,8 +105,15 @@
   ::ng-deep m-comment {
     .m-comment__avatarWrapper,
     .m-comment__ownerRow,
-    .m-comment__toolbar {
+    .m-comment__toolbar,
+    .m-comment__repliesToggle {
       display: none !important;
+    }
+    .m-comment {
+      @include m-theme() {
+        border: 1px solid themed($m-borderColor--primary);
+      }
+      padding: 20px;
     }
     img {
       max-width: 100%;
