--- a/src/app/modules/notifications/v3/notification.component.ng.scss
+++ b/src/app/modules/notifications/v3/notification.component.ng.scss
@@ -115,6 +115,9 @@
       }
       padding: 20px;
     }
+    .minds-body {
+      max-width: 100%;
+    }
     img {
       max-width: 100%;
       max-height: 300px;
@@ -125,6 +128,10 @@
         color: themed($m-link);
       }
     }
+  }
+
+  ::ng-deep m-comment minds-rich-embed {
+    display: none;
   }
 
   .m-notificationNotification__commentPreview p {
